--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "axios": "^1.2.0",
     "html-webpack-plugin": "^5.5.0",
     "regenerator-runtime": "^0.13.10",
     "webpack-merge": "^5.8.0"
