--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "author": "alvin_maulana <alvinms1001@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
     "autoprefixer": "^10.4.13",
+    "babel-loader": "^9.1.0",
     "css-loader": "^6.7.2",
     "eslint": "^8.28.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "postcss": "^8.4.19",
-    "postcss-loader": "^7.0.1",
+    "postcss": "^8.4.20",
+    "postcss-loader": "^7.0.2",
     "postcss-preset-env": "^7.8.3",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.2.4",
